--- a/.github/workflows/linux_machine_gcc.yml
+++ b/.github/workflows/linux_machine_gcc.yml
@@ -11,7 +11,10 @@ jobs:
         image: mysql:5.7
         env:
             MYSQL_ALLOW_EMPTY_PASSWORD: yes
-            MYSQL_DATABASE: root
+            MYSQL_USER: testuser
+            MYSQL_PASSWORD: password
+            MYSQL_ROOT_PASSWORD: password
+            MYSQL_DATABASE: testdb
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
