GSvar: updated filter "dominant relaxed (add phenotype region)"

--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -65,7 +65,10 @@ Classification NGSD	action=KEEP	classes=4,5
 Allele frequency	max_af=1.0
 Allele frequency (sub-populations)	max_af=1.0
 Count NGSD	max_count=5	ignore_genotype=false
-Impact	impact=HIGH,MODERATE,LOW,MODIFIER
+Impact	impact=HIGH,MODERATE,LOW
+Splice effect	MaxEntScan=-15	SpliceAi=0.5	action=KEEP
+Predicted pathogenic	min=2	action=KEEP	skip_high_impact=yes	cutoff_cadd=20	cutoff_revel=0.9	cutoff_phylop=1.6	ignore_sift=no	ignore_polyphen=no	disabled
+Count NGSD	max_count=5	ignore_genotype=no
 Annotated pathogenic	action=KEEP	sources=HGMD,ClinVar	also_likely_pathogenic=false
 Allele frequency	max_af=3.0
 Classification NGSD	action=REMOVE	classes=1,2
