--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -3,7 +3,7 @@ Allele frequency	max_af=1.0
 Allele frequency (sub-populations)	max_af=1.0
 Count NGSD	max_count=20	ignore_genotype=false
 Impact	impact=HIGH,MODERATE,LOW
-Filter columns	action=REMOVE	entries=off-target
+Filter columns	action=REMOVE	entries=low_mappability,mosaic,off-target
 Annotated pathogenic	action=KEEP	sources=HGMD,ClinVar	also_likely_pathogenic=true
 Allele frequency	max_af=3.0
 Classification NGSD	action=REMOVE	classes=1,2
@@ -19,6 +19,7 @@ Allele frequency	max_af=0.5
 Allele frequency (sub-populations)	max_af=0.5
 Count NGSD	max_count=15	ignore_genotype=false
 Impact	impact=HIGH,MODERATE
+Filter columns	action=REMOVE	entries=low_mappability,mosaic
 Filter columns	action=REMOVE	entries=low_conf_region	disabled
 Annotated pathogenic	action=KEEP	sources=HGMD,ClinVar	also_likely_pathogenic=false
 Allele frequency	max_af=3.0
@@ -31,6 +32,7 @@ Allele frequency	max_af=1.0
 Allele frequency (sub-populations)	max_af=1.0
 Count NGSD	max_count=40	ignore_genotype=false
 Impact	impact=HIGH,MODERATE,LOW
+Filter columns	action=REMOVE	entries=low_mappability,mosaic
 Filter columns	action=REMOVE	entries=low_conf_region	disabled
 Annotated pathogenic	action=KEEP	sources=HGMD,ClinVar	also_likely_pathogenic=false
 Allele frequency	max_af=3.0
@@ -44,6 +46,7 @@ Allele frequency (sub-populations)	max_af=0.1
 Count NGSD	max_count=5	ignore_genotype=false
 Impact	impact=HIGH
 Gene constraint	min_pli=0.8	max_oe_lof=0.35
+Filter columns	action=REMOVE	entries=low_mappability,mosaic
 Filter columns	action=REMOVE	entries=low_conf_region	disabled
 Annotated pathogenic	action=KEEP	sources=HGMD,ClinVar	also_likely_pathogenic=false
 Allele frequency	max_af=3.0
@@ -55,6 +58,7 @@ Allele frequency	max_af=0.1
 Allele frequency (sub-populations)	max_af=0.1
 Count NGSD	max_count=5	ignore_genotype=false
 Impact	impact=HIGH,MODERATE
+Filter columns	action=REMOVE	entries=low_mappability,mosaic
 Filter columns	action=REMOVE	entries=low_conf_region	disabled
 Annotated pathogenic	action=KEEP	sources=HGMD,ClinVar	also_likely_pathogenic=false
 Allele frequency	max_af=3.0
@@ -66,6 +70,8 @@ Allele frequency	max_af=1.0
 Allele frequency (sub-populations)	max_af=1.0
 Count NGSD	max_count=5	ignore_genotype=false
 Impact	impact=HIGH,MODERATE,LOW
+Filter columns	action=REMOVE	entries=low_mappability,mosaic
+Filter columns	action=REMOVE	entries=low_conf_region	disabled
 Splice effect	MaxEntScan=-15	SpliceAi=0.5	action=KEEP
 Predicted pathogenic	min=2	action=KEEP	skip_high_impact=yes	cutoff_cadd=20	cutoff_revel=0.9	cutoff_phylop=1.6	ignore_sift=no	ignore_polyphen=no	disabled
 Count NGSD	max_count=5	ignore_genotype=no
@@ -76,10 +82,42 @@ Classification NGSD	action=KEEP	classes=4,5
 
 #---
 
+#mosaic WGS (mosaic dialog)
+Filter columns	action=REMOVE	entries=low_conf_region
+Variant quality	qual=0	depth=10	mapq=55	strand_bias=-1	allele_balance=-1	min_occurences=1	min_af=0.1	max_af=1.0
+
+#mosaic WES (mosaic dialog)
+Filter columns	action=REMOVE	entries=low_conf_region
+Variant quality	qual=0	depth=30	mapq=55	strand_bias=-1	allele_balance=-1	min_occurences=2	min_af=0.1	max_af=1.0
+
+#mosaic WGS (main variant list)
+Filter columns	entries=mosaic	action=FILTER
+Filter columns	action=REMOVE	entries=low_conf_region
+Variant quality	qual=0	depth=10	mapq=55	strand_bias=-1	allele_balance=-1	min_occurences=1	min_af=0.1	max_af=1.0
+
+#mosaic WES (main variant list)
+Filter columns	entries=mosaic	action=FILTER
+Filter columns	action=REMOVE	entries=low_conf_region
+Variant quality	qual=0	depth=30	mapq=55	strand_bias=-1	allele_balance=-1	min_occurences=2	min_af=0.1	max_af=1.0
+
+#low mappability
+Allele frequency	max_af=1
+Allele frequency (sub-populations)	max_af=1
+Count NGSD	max_count=20	ignore_genotype=no
+Impact	impact=HIGH,MODERATE,LOW
+Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=yes	action=KEEP
+Allele frequency	max_af=3
+Classification NGSD	classes=1,2	action=REMOVE
+Classification NGSD	classes=3,4,5,M	action=KEEP
+Filter columns	entries=low_mappability	action=FILTER
+
+#---
+
 #carrier (add ACMG region)
 Allele frequency	max_af=1.0
 Allele frequency (sub-populations)	max_af=1.0
 Impact	impact=HIGH,MODERATE,LOW
+Filter columns	action=REMOVE	entries=low_mappability,mosaic
 Annotated pathogenic	sources=ClinVar,HGMD	also_likely_pathogenic=yes	action=KEEP
 Allele frequency	max_af=3.0
 Classification NGSD	action=REMOVE	classes=1,2
@@ -162,13 +200,3 @@ Tumor zygosity	hom_af_range=10
 Filter column empty
 Column match	pattern=known	column=CGI_driver_statement	action=KEEP
 Variant type
-
-#---
-
-#mosaic WGS
-Filter columns	action=REMOVE	entries=low_conf_region
-Variant quality	qual=0	depth=10	mapq=55	strand_bias=-1	allele_balance=-1	min_occurences=1	min_af=0.0	max_af=1.0
-
-#mosaic WES
-Filter columns	action=REMOVE	entries=low_conf_region
-Variant quality	qual=0	depth=30	mapq=55	strand_bias=-1	allele_balance=-1	min_occurences=2	min_af=0.0	max_af=1.0
