--- a/bin/GSvar.ini.example
+++ b/bin/GSvar.ini.example
@@ -4,6 +4,7 @@ igv_menu=@Invalid()
 igv_host=127.0.0.1
 igv_port=60151
 igv_genome=1kg_v37
+igv_virus_genome = ""
 
 #NGSD functionality
 NGSD_enabled=true
