add GRCh37 genome to nightly settings

--- a/bin/settings_nightly.ini
+++ b/bin/settings_nightly.ini
@@ -3,6 +3,7 @@
 ###########################################################################
 
 reference_genome = "/mnt/share/data/genomes/GRCh38.fa"
+reference_genome_hg19 = "/mnt/share/data/genomes/GRCh37.fa"
 liftover_hg19_hg38 = "/mnt/share/opt/liftOver/hg19ToHg38.over.chain"
 liftover_hg38_hg19 = "/mnt/share/opt/liftOver/hg38ToHg19.over.chain"
 
