GSvar: updated mosaic default filters

--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -92,11 +92,13 @@ Variant quality	qual=0	depth=30	mapq=55	strand_bias=-1	allele_balance=-1	min_occ
 
 #mosaic WGS (main variant list)
 Filter columns	entries=mosaic	action=FILTER
+Count NGSD	max_count=20	ignore_genotype=false
 Filter columns	action=REMOVE	entries=low_conf_region
 Variant quality	qual=0	depth=10	mapq=55	strand_bias=-1	allele_balance=-1	min_occurences=1	min_af=0.1	max_af=1.0
 
 #mosaic WES (main variant list)
 Filter columns	entries=mosaic	action=FILTER
+Count NGSD	max_count=20	ignore_genotype=false
 Filter columns	action=REMOVE	entries=low_conf_region
 Variant quality	qual=0	depth=30	mapq=55	strand_bias=-1	allele_balance=-1	min_occurences=2	min_af=0.1	max_af=1.0
 
