--- a/.github/workflows/windows_machine.yml
+++ b/.github/workflows/windows_machine.yml
@@ -9,11 +9,12 @@ jobs:
       run:
         shell: msys2 {0}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: msys2/setup-msys2@v2
         with:
           msystem: MINGW32
-          update: true
+          update: false
+          release: false
           install: git base-devel mingw-w64-i686-toolchain mingw-w64-i686-zlib mingw-w64-i686-bzip2 mingw-w64-i686-xz mingw-w64-i686-curl mingw-w64-i686-dlfcn mingw-w64-i686-qt5 mingw-w64-i686-libmariadbclient mingw-w64-i686-python mingw-w64-i686-python-numpy mingw-w64-i686-python-matplotlib mingw-w64-i686-python-packaging unzip
 
       - name: Update submodules
