Updated GSvar filters (correct handling of mosaic/low-mappability variants that are in ClinVar/HGMD.

--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -3,9 +3,10 @@ Allele frequency	max_af=1.0
 Allele frequency (sub-populations)	max_af=1.0
 Count NGSD	max_count=20	ignore_genotype=false
 Impact	impact=HIGH,MODERATE,LOW
-Filter columns	action=REMOVE	entries=low_mappability,mosaic,off-target
+Filter columns	action=REMOVE	entries=off-target
 Annotated pathogenic	action=KEEP	sources=HGMD,ClinVar	also_likely_pathogenic=true
 Allele frequency	max_af=3.0
+Filter columns	action=REMOVE	entries=low_mappability,mosaic
 Classification NGSD	action=REMOVE	classes=1,2
 Classification NGSD	action=KEEP	classes=3,4,5,M
 
@@ -19,10 +20,10 @@ Allele frequency	max_af=0.5
 Allele frequency (sub-populations)	max_af=0.5
 Count NGSD	max_count=15	ignore_genotype=false
 Impact	impact=HIGH,MODERATE
-Filter columns	action=REMOVE	entries=low_mappability,mosaic
 Filter columns	action=REMOVE	entries=low_conf_region	disabled
 Annotated pathogenic	action=KEEP	sources=HGMD,ClinVar	also_likely_pathogenic=false
 Allele frequency	max_af=3.0
+Filter columns	action=REMOVE	entries=low_mappability,mosaic
 Classification NGSD	action=REMOVE	classes=1,2
 Classification NGSD	action=KEEP	classes=4,5
 Genotype affected	genotypes=hom,comp-het
@@ -32,10 +33,10 @@ Allele frequency	max_af=1.0
 Allele frequency (sub-populations)	max_af=1.0
 Count NGSD	max_count=40	ignore_genotype=false
 Impact	impact=HIGH,MODERATE,LOW
-Filter columns	action=REMOVE	entries=low_mappability,mosaic
 Filter columns	action=REMOVE	entries=low_conf_region	disabled
 Annotated pathogenic	action=KEEP	sources=HGMD,ClinVar	also_likely_pathogenic=false
 Allele frequency	max_af=3.0
+Filter columns	action=REMOVE	entries=low_mappability,mosaic
 Classification NGSD	action=REMOVE	classes=1,2
 Classification NGSD	action=KEEP	classes=4,5
 Genotype affected	genotypes=hom,comp-het
@@ -46,10 +47,10 @@ Allele frequency (sub-populations)	max_af=0.1
 Count NGSD	max_count=5	ignore_genotype=false
 Impact	impact=HIGH
 Gene constraint	min_pli=0.8	max_oe_lof=0.35
-Filter columns	action=REMOVE	entries=low_mappability,mosaic
 Filter columns	action=REMOVE	entries=low_conf_region	disabled
 Annotated pathogenic	action=KEEP	sources=HGMD,ClinVar	also_likely_pathogenic=false
 Allele frequency	max_af=3.0
+Filter columns	action=REMOVE	entries=low_mappability,mosaic
 Classification NGSD	action=REMOVE	classes=1,2
 Classification NGSD	action=KEEP	classes=4,5
 
@@ -58,10 +59,11 @@ Allele frequency	max_af=0.1
 Allele frequency (sub-populations)	max_af=0.1
 Count NGSD	max_count=5	ignore_genotype=false
 Impact	impact=HIGH,MODERATE
-Filter columns	action=REMOVE	entries=low_mappability,mosaic
+
 Filter columns	action=REMOVE	entries=low_conf_region	disabled
 Annotated pathogenic	action=KEEP	sources=HGMD,ClinVar	also_likely_pathogenic=false
 Allele frequency	max_af=3.0
+Filter columns	action=REMOVE	entries=low_mappability,mosaic
 Classification NGSD	action=REMOVE	classes=1,2
 Classification NGSD	action=KEEP	classes=4,5
 
@@ -70,13 +72,14 @@ Allele frequency	max_af=1.0
 Allele frequency (sub-populations)	max_af=1.0
 Count NGSD	max_count=5	ignore_genotype=false
 Impact	impact=HIGH,MODERATE,LOW
-Filter columns	action=REMOVE	entries=low_mappability,mosaic
+
 Filter columns	action=REMOVE	entries=low_conf_region	disabled
 Splice effect	MaxEntScan=-15	SpliceAi=0.5	action=KEEP
 Predicted pathogenic	min=2	action=KEEP	skip_high_impact=yes	cutoff_cadd=20	cutoff_revel=0.9	cutoff_phylop=1.6	ignore_sift=no	ignore_polyphen=no	disabled
 Count NGSD	max_count=5	ignore_genotype=no
 Annotated pathogenic	action=KEEP	sources=HGMD,ClinVar	also_likely_pathogenic=yes
 Allele frequency	max_af=3.0
+Filter columns	action=REMOVE	entries=low_mappability,mosaic
 Classification NGSD	action=REMOVE	classes=1,2
 Classification NGSD	action=KEEP	classes=4,5
 
@@ -119,9 +122,9 @@ Filter columns	entries=low_mappability	action=FILTER
 Allele frequency	max_af=1.0
 Allele frequency (sub-populations)	max_af=1.0
 Impact	impact=HIGH,MODERATE,LOW
-Filter columns	action=REMOVE	entries=low_mappability,mosaic
 Annotated pathogenic	sources=ClinVar,HGMD	also_likely_pathogenic=yes	action=KEEP
 Allele frequency	max_af=3.0
+Filter columns	action=REMOVE	entries=low_mappability,mosaic
 Classification NGSD	action=REMOVE	classes=1,2
 Classification NGSD	action=KEEP	classes=4,5
 
