Updated deployment and nightly settings paths

--- a/bin/settings_nightly.ini
+++ b/bin/settings_nightly.ini
@@ -2,34 +2,49 @@
 #          Common settings that need to be set for many tools             #
 ###########################################################################
 
-reference_genome = "/mnt/share/data/genomes/GRCh38.fa"
-reference_genome_hg19 = "/mnt/share/data/genomes/GRCh37.fa"
-liftover_hg19_hg38 = "/mnt/share/opt/liftOver/hg19ToHg38.over.chain"
-liftover_hg38_hg19 = "/mnt/share/opt/liftOver/hg38ToHg19.over.chain"
+reference_genome = "/mnt/storage2/megSAP/data/genomes/GRCh38.fa"
+reference_genome_hg19 ="/mnt/storage2/megSAP/data/genomes/GRCh37.fa"
+liftover_hg19_hg38 = "/mnt/storage2/megSAP/tools/liftOver/hg19ToHg38.over.chain.gz"
+liftover_hg38_hg19 = "/mnt/storage2/megSAP/tools/liftOver/hg38ToHg19.over.chain.gz"
 
 ############################ internal settings ############################
 #   If you do not know what these settings mean, leave them unchanged!    #
 ###########################################################################
 
-#NGSD TEST database credentials
+#NGSD MySQL credentials
+ngsd_host = ""
+ngsd_port = 3306
+ngsd_name = ""
+ngsd_user = ""
+ngsd_pass = ""
+
 ngsd_test_host = "SRV011.img.med.uni-tuebingen.de"
 ngsd_test_port = 3306
 ngsd_test_name = "NGSD_nightly"
 ngsd_test_user = "ngsd_nightly"
 ngsd_test_pass = "wacRY5MfpXPQQx9M"
 
+#GL8 MySQL credentials
+genlab_mssql = true
+genlab_host = ""
+genlab_name = ""
+genlab_user = ""
+genlab_pass = ""
+
 #megSAP folders
 projects_folder_diagnostic = "/mnt/storage2/GRCh38/projects/diagnostic/"
 projects_folder_research = "/mnt/storage1/projects/research/"
 projects_folder_test = "/mnt/storage2/projects/test/"
 projects_folder_external = "/mnt/storage1/projects/external/"
-data_folder = /mnt/storage2/GRCh38/share/data/
+data_folder = /mnt/storage2/megSAP/data/
+
+#setting for variant scoring/ranking
+ranking_variant_blacklist=""
 
 #server settings
 url_lifetime = 5000
 server_host = "127.0.0.1"
-http_server_port = 
-https_server_port = 
+server_port = 
 ssl_certificate = 
 ssl_key = 
 ssl_certificate_chain = 
