GSvar: added SV filter for CNV overlap

--- a/bin/GSvar_filters_sv.ini
+++ b/bin/GSvar_filters_sv.ini
@@ -4,6 +4,7 @@ SV allele frequency NGSD	max_af=1.00
 SV filter columns	action=FILTER	entries=PASS
 SV PE read depth	PE Read Depth=5
 SV quality	quality=100
+SV CNV overlap	min_ol=0.5	min_size=10000
 SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
 SV genotype affected	genotypes=hom	same_genotype=false	disabled
 SV OMIM genes	disabled
@@ -13,6 +14,7 @@ SV break point density NGSD	disabled
 #wgs relaxed
 SV remove chr type	chromosome type=special chromosomes
 SV allele frequency NGSD	max_af=1.00
+SV CNV overlap	min_ol=0.5	min_size=10000	disabled
 SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
 SV genotype affected	genotypes=hom	same_genotype=false	disabled
 SV OMIM genes	disabled
