GSvar: updated relaxed trio filter

--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -126,7 +126,7 @@ Classification NGSD	action=KEEP	classes=4,5
 Allele frequency	max_af=1.0
 Allele frequency (sub-populations)	max_af=1.0
 Count NGSD	max_count=20	ignore_genotype=false
-Variant quality	qual=250	depth=10	mapq=40	strand_bias=50	allele_balance=50
+Variant quality	qual=250	depth=10	mapq=40	strand_bias=50	allele_balance=50	min_occurences=1
 Variant type
 Annotated pathogenic	action=KEEP	sources=HGMD,ClinVar	also_likely_pathogenic=false
 Allele frequency	max_af=3.0
@@ -138,7 +138,7 @@ Trio	types=de-novo,recessive,LOH,comp-het,x-linked	build=hg38
 Allele frequency	max_af=1.0
 Allele frequency (sub-populations)	max_af=1.0
 Count NGSD	max_count=20	ignore_genotype=false
-Variant quality	qual=50	depth=0	mapq=40	strand_bias=-1	allele_balance=-1
+Variant quality	qual=50	depth=0	mapq=40	strand_bias=-1	allele_balance=-1	min_occurences=0
 Annotated pathogenic	action=KEEP	sources=HGMD,ClinVar	also_likely_pathogenic=true
 Allele frequency	max_af=3.0
 Classification NGSD	action=REMOVE	classes=1,2
