GSvar/VariantFilterAnnotations: complete refactoring of MaxEntScan score handling - including handling of de-novo acceptor/donor sites

--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -59,7 +59,6 @@ Allele frequency	max_af=0.1
 Allele frequency (sub-populations)	max_af=0.1
 Count NGSD	max_count=5	ignore_genotype=false
 Impact	impact=HIGH,MODERATE
-
 Filter columns	action=REMOVE	entries=low_conf_region	disabled
 Annotated pathogenic	action=KEEP	sources=HGMD,ClinVar	also_likely_pathogenic=false
 Allele frequency	max_af=3.0
@@ -72,9 +71,8 @@ Allele frequency	max_af=1.0
 Allele frequency (sub-populations)	max_af=1.0
 Count NGSD	max_count=5	ignore_genotype=false
 Impact	impact=HIGH,MODERATE,LOW
-
 Filter columns	action=REMOVE	entries=low_conf_region	disabled
-Splice effect	MaxEntScan=-15	SpliceAi=0.5	action=KEEP
+Splice effect	MaxEntScan=HIGH	SpliceAi=0.5	splice_site_only=true	action=KEEP
 Predicted pathogenic	min=2	action=KEEP	skip_high_impact=yes	cutoff_cadd=20	cutoff_revel=0.9	cutoff_phylop=1.6	ignore_sift=no	ignore_polyphen=no	disabled
 Count NGSD	max_count=5	ignore_genotype=no
 Annotated pathogenic	action=KEEP	sources=HGMD,ClinVar	also_likely_pathogenic=yes
