bin/GSvar.ini.example: added path for burden test files
src/GSvar/BurdenTestWidget.*: added bed file names to output

--- a/bin/GSvar.ini.example
+++ b/bin/GSvar.ini.example
@@ -40,6 +40,7 @@ gsvar_xml_folder = ""
 gsvar_publication_folder = ""
 gsvar_variantsheet_folder = ""
 gsvar_variant_export_folder = ""
+burden_test_files = ""
 
 #debugging
 debug_mode_enabled=false
