updated SQL server name for nightly tests

--- a/bin/settings_nightly.ini
+++ b/bin/settings_nightly.ini
@@ -18,7 +18,7 @@ ngsd_name = ""
 ngsd_user = ""
 ngsd_pass = ""
 
-ngsd_test_host = "SRV011.img.med.uni-tuebingen.de"
+ngsd_test_host = "sql.img.med.uni-tuebingen.de"
 ngsd_test_port = 3306
 ngsd_test_name = "NGSD_nightly"
 ngsd_test_user = "ngsd_nightly"
