GSvar: show columns processing modus and batch number in sample overview table (#478)

--- a/bin/GSvar.ini.example
+++ b/bin/GSvar.ini.example
@@ -32,6 +32,8 @@ alamut_apikey = ""
 #proxy settings for GSvar
 proxy_host = ""
 proxy_port = 
+proxy_user = ""
+proxy_password = ""
 
 #special folders for GSvar
 gsvar_report_folder = ""
