bin/settings_nightly.ini: added NovaSeq X settings

--- a/bin/settings_nightly.ini
+++ b/bin/settings_nightly.ini
@@ -49,3 +49,8 @@ ssl_certificate =
 ssl_key = 
 ssl_certificate_chain = 
 session_duration = 36000
+
+#NovaSeqX
+sample_sheet_path = 
+nova_seq_x_sw_version = "4.1.7"
+nova_seq_x_app_version = "1.1.4"
