--- a/bin/settings.ini.example
+++ b/bin/settings.ini.example
@@ -47,3 +47,8 @@ ranking_variant_blacklist=
 
 #python executable for plotting (set if the python exe is not in the PATH)
 python_exe = ""
+
+#NovaSeqX
+sample_sheet_path = 
+nova_seq_x_sw_version = "4.1.7"
+nova_seq_x_app_version = "1.1.4"
