GSvar: updated "dominant relaxed" filter for small variants to include de-novo splice sites

--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -72,7 +72,7 @@ Allele frequency (sub-populations)	max_af=1.0
 Count NGSD	max_count=5	ignore_genotype=false
 Impact	impact=HIGH,MODERATE,LOW
 Filter columns	action=REMOVE	entries=low_conf_region	disabled
-Splice effect	MaxEntScan=HIGH	SpliceAi=0.5	splice_site_only=true	action=KEEP
+Splice effect	MaxEntScan=HIGH	SpliceAi=0.5	splice_site_only=false	action=KEEP
 Predicted pathogenic	min=2	action=KEEP	skip_high_impact=yes	cutoff_phylop=1.6	cutoff_cadd=20	cutoff_revel=0.9	cutoff_alphamissense=0.56	disabled
 Count NGSD	max_count=5	ignore_genotype=no
 Annotated pathogenic	action=KEEP	sources=HGMD,ClinVar	also_likely_pathogenic=yes
