GSvar: added default filter for splicing variants

--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -1,4 +1,4 @@
-#allele-frequency based filter
+#rare variants (coding and splicing region)
 Allele frequency	max_af=1.0
 Allele frequency (sub-populations)	max_af=1.0
 Count NGSD	max_count=20	ignore_genotype=false
@@ -9,6 +9,13 @@ Allele frequency	max_af=3.0
 Filter columns	action=REMOVE	entries=low_mappability,mosaic
 Classification NGSD	action=REMOVE	classes=1,2
 Classification NGSD	action=KEEP	classes=3,4,5,M
+
+#rare variants (non-coding, predicted splicing change)
+Allele frequency	max_af=1
+Allele frequency (sub-populations)	max_af=1
+Count NGSD	max_count=20	ignore_genotype=no	mosaic_as_het=no
+Impact	impact=MODIFIER
+Splice effect	SpliceAi=0.5	MaxEntScan=LOW	splice_site_only=no	action=FILTER
 
 #GSvar score/rank
 GSvar score/rank	top=10
