--- a/.github/workflows/mac_machine.yml
+++ b/.github/workflows/mac_machine.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Update Homebrew
       run: brew update
     - name: Remove existing Python symlinks
-      run: rm /usr/local/bin/2to3 /usr/local/bin/idle3 /usr/local/bin/pydoc3 /usr/local/bin/python3 /usr/local/bin/python3-config /usr/local/bin/2to3-3.11 /usr/local/bin/idle3.11 /usr/local/bin/pydoc3.11 /usr/local/bin/python3.11 /usr/local/bin/python3.11-config
+      run: rm /usr/local/bin/2to3 /usr/local/bin/idle3 /usr/local/bin/pydoc3 /usr/local/bin/python3 /usr/local/bin/python3-config /usr/local/bin/2to3-3.11 /usr/local/bin/idle3.11 /usr/local/bin/pydoc3.11 /usr/local/bin/python3.11 /usr/local/bin/python3.11-config /usr/local/bin/2to3-3.12 /usr/local/bin/idle3.12 /usr/local/bin/pydoc3.12 /usr/local/bin/python3.12 /usr/local/bin/python3.12-config
     - name: Install Python 3
       run: brew install python@3.10
     - name: Setup other dependencies
