Updated Splice AI filter cascade INI files

--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -15,7 +15,7 @@ Allele frequency	max_af=1
 Allele frequency (sub-populations)	max_af=1
 Count NGSD	max_count=20	ignore_genotype=no	mosaic_as_het=no
 Impact	impact=MODIFIER
-Splice effect	SpliceAi=0.5	MaxEntScan=HIGH	splice_site_only=no	action=FILTER
+Splice effect	SpliceAi=0.5	MaxEntScan=HIGH	splice_site_only=false	action=FILTER
 
 #GSvar score/rank
 GSvar score/rank	top=10
