--- a/bin/GSvar_filters_sv.ini
+++ b/bin/GSvar_filters_sv.ini
@@ -22,6 +22,33 @@ SV gene overlap	complete=true	exonic/splicing=true	intronic/intergenic=false	dis
 SV compound-heterozygous	mode=n/a	disabled
 SV break point density NGSD	disabled
 #---
+#lrGS stringent
+SV remove chr type	chromosome type=special chromosomes
+SV allele frequency NGSD	max_af=1.00
+SV filter columns	action=FILTER	entries=PASS
+SV quality	quality=30
+SV CNV overlap	min_ol=0.5	min_size=10000
+SV break point density NGSD	max_density=20	remove_strict=no	only_system_specific=yes
+SV-lr support reads	min_support=5
+SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
+SV genotype affected	genotypes=hom	same_genotype=false	disabled
+SV OMIM genes	disabled
+SV gene overlap	complete=true	exonic/splicing=true	intronic/intergenic=false	disabled
+SV compound-heterozygous	mode=n/a	disabled
+SV break point density NGSD	disabled
+#lrGS relaxed
+SV remove chr type	chromosome type=special chromosomes
+SV allele frequency NGSD	max_af=1.00
+SV CNV overlap	min_ol=0.5	min_size=10000	disabled
+SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
+SV genotype affected	genotypes=hom	same_genotype=false	disabled
+SV break point density NGSD	max_density=20	remove_strict=no	only_system_specific=yes	disabled
+SV-lr support reads	min_support=5	disabled
+SV OMIM genes	disabled
+SV gene overlap	complete=true	exonic/splicing=true	intronic/intergenic=false	disabled
+SV compound-heterozygous	mode=n/a	disabled
+SV break point density NGSD	disabled
+#---
 #exome stringent
 SV remove chr type	chromosome type=special chromosomes
 SV count NGSD	max_count=30
