--- a/.github/workflows/mac_machine.yml
+++ b/.github/workflows/mac_machine.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install matplotlib and numpy for Python 2
       run: sudo pip install matplotlib numpy
     - name: Install matplotlib and numpy for Python 3
-      run: python3 -m pip install matplotlib numpy
+      run: python3 -m pip install matplotlib numpy --break-system-packages
     - name: Build project dependencies
       run: make build_3rdparty build_libs_release build_tools_release build_gui_release build_server_release
     - name: Create a folder for SSL
