--- a/bin/settings.ini.example
+++ b/bin/settings.ini.example
@@ -52,3 +52,4 @@ python_exe = ""
 sample_sheet_path = 
 nova_seq_x_sw_version = "4.1.23"
 nova_seq_x_app_version = "1.2.1"
+nova_seq_x_keep_fastq = 1
