bin/GSvar_filters*: added filter presets for lrGS

--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -48,6 +48,34 @@ Classification NGSD	action=REMOVE	classes=1,2
 Classification NGSD	action=KEEP	classes=4,5
 Genotype affected	genotypes=hom,comp-het
 
+#recessive stringent lrGS
+Allele frequency	max_af=0.5
+Allele frequency (sub-populations)	max_af=0.5
+Count NGSD	max_count=15	ignore_genotype=no	mosaic_as_het=no
+Impact	impact=HIGH,MODERATE
+Filter columns	entries=low_conf_region	action=REMOVE	disabled
+Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=no	action=KEEP
+Allele frequency	max_af=3
+Filter columns	entries=low_mappability,mosaic	action=REMOVE
+Classification NGSD	classes=1,2	action=REMOVE
+Classification NGSD	classes=4,5	action=KEEP
+Genotype affected	genotypes=hom,comp-het (phased)
+Variant quality	qual=10	depth=0	mapq=40	strand_bias=20	allele_balance=40	min_occurences=1	min_af=0.2	max_af=1
+
+#recessive relaxed lrGS
+Allele frequency	max_af=1
+Allele frequency (sub-populations)	max_af=1
+Count NGSD	max_count=40	ignore_genotype=no	mosaic_as_het=no
+Impact	impact=HIGH,MODERATE,LOW
+Filter columns	entries=low_conf_region	action=REMOVE	disabled
+Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=no	action=KEEP
+Allele frequency	max_af=3
+Filter columns	entries=low_mappability,mosaic	action=REMOVE
+Classification NGSD	classes=1,2	action=REMOVE
+Classification NGSD	classes=4,5	action=KEEP
+Genotype affected	genotypes=hom,comp-het
+Variant quality	qual=10	depth=0	mapq=40	strand_bias=20	allele_balance=40	min_occurences=1	min_af=0.2	max_af=1
+
 #dominant stringent
 Allele frequency	max_af=0.1
 Allele frequency (sub-populations)	max_af=0.1
@@ -87,6 +115,37 @@ Allele frequency	max_af=3.0
 Filter columns	action=REMOVE	entries=low_mappability,mosaic
 Classification NGSD	action=REMOVE	classes=1,2
 Classification NGSD	action=KEEP	classes=4,5
+
+#dominant stringent lrGS
+Allele frequency	max_af=0.1
+Allele frequency (sub-populations)	max_af=0.1
+Count NGSD	max_count=5	ignore_genotype=no	mosaic_as_het=no
+Impact	impact=HIGH
+Gene constraint	max_oe_lof=0.35	min_pli=0.8
+Filter columns	entries=low_conf_region	action=REMOVE	disabled
+Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=no	action=KEEP
+Allele frequency	max_af=3
+Filter columns	entries=low_mappability,mosaic	action=REMOVE
+Classification NGSD	classes=1,2	action=REMOVE
+Classification NGSD	classes=4,5	action=KEEP
+Variant type	HIGH=frameshift_variant,splice_acceptor_variant,splice_donor_variant,start_lost,start_retained_variant,stop_gained,stop_lost	MODERATE=inframe_deletion,inframe_insertion,missense_variant	LOW=splice_region_variant	MODIFIER=
+Variant quality	qual=20	depth=0	mapq=40	strand_bias=20	allele_balance=40	min_occurences=1	min_af=0.25	max_af=1
+SNVs only	invert=no	disabled
+
+#dominant relaxed lrGS
+Allele frequency	max_af=0.1
+Allele frequency (sub-populations)	max_af=0.1
+Count NGSD	max_count=5	ignore_genotype=no	mosaic_as_het=no
+Impact	impact=HIGH,MODERATE
+Filter columns	entries=low_conf_region	action=REMOVE	disabled
+Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=no	action=KEEP
+Allele frequency	max_af=3
+Filter columns	entries=low_mappability,mosaic	action=REMOVE
+Classification NGSD	classes=1,2	action=REMOVE
+Classification NGSD	classes=4,5	action=KEEP
+Variant quality	qual=10	depth=0	mapq=40	strand_bias=20	allele_balance=40	min_occurences=1	min_af=0.2	max_af=1
+Variant type	HIGH=frameshift_variant,splice_acceptor_variant,splice_donor_variant,start_lost,start_retained_variant,stop_gained,stop_lost	MODERATE=inframe_deletion,inframe_insertion,missense_variant	LOW=splice_region_variant	MODIFIER=
+SNVs only	invert=no	disabled
 
 #---
 
