--- a/bin/GSvar_filters_cnv.ini
+++ b/bin/GSvar_filters_cnv.ini
@@ -32,3 +32,15 @@ CNV log-likelihood	min_ll=1.0	scale_by_regions=yes
 CNV clonality	min_clonality=0.0	max_clonality=1.0
 CNV tumor CN change	min_tumor_cn=6	max_tumor_cn=100
 CNV maximum log-likelihood	disabled
+
+#ClinCNV: lrGS
+CNV size	size=10	disabled
+CNV regions	regions=3	disabled
+CNV log-likelihood	min_ll=12	scale_by_regions=no
+CNV q-value	max_q=0.05	disabled
+CNV polymorphism region	column=overlap af_genomes_imgag	max_ol=0.95	disabled
+CNV copy-number	cn=0,1	disabled
+CNV OMIM genes	action=FILTER	disabled
+CNV gene overlap	complete=yes	exonic/splicing=yes	intronic/intergenic=no	disabled
+CNV compound-heterozygous	mode=n/a	disabled
+CNV log-likelihood	min_ll=5	scale_by_regions=yes
