--- a/bin/GSvar_filters_sv.ini
+++ b/bin/GSvar_filters_sv.ini
@@ -24,30 +24,32 @@ SV break point density NGSD	disabled
 #---
 #lrGS stringent
 SV remove chr type	chromosome type=special chromosomes
-SV allele frequency NGSD	max_af=1.00
-SV filter columns	action=FILTER	entries=PASS
+SV allele frequency NGSD	max_af=1
+SV filter columns	entries=PASS	action=FILTER
 SV quality	quality=30
 SV CNV overlap	min_ol=0.5	min_size=10000
 SV break point density NGSD	max_density=20	remove_strict=no	only_system_specific=yes
 SV-lr support reads	min_support=5
 SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
-SV genotype affected	genotypes=hom	same_genotype=false	disabled
-SV OMIM genes	disabled
-SV gene overlap	complete=true	exonic/splicing=true	intronic/intergenic=false	disabled
+SV genotype affected	genotypes=hom	same_genotype=no	disabled
+SV OMIM genes	action=FILTER	disabled
+SV gene overlap	complete=yes	exonic/splicing=yes	intronic/intergenic=no	disabled
 SV compound-heterozygous	mode=n/a	disabled
-SV break point density NGSD	disabled
+SV break point density NGSD	max_density=30	remove_strict=no	only_system_specific=no	disabled
 #lrGS relaxed
 SV remove chr type	chromosome type=special chromosomes
-SV allele frequency NGSD	max_af=1.00
+SV allele frequency NGSD	max_af=1
+SV filter columns	entries=PASS	action=FILTER	disabled
+SV quality	quality=30	disabled
 SV CNV overlap	min_ol=0.5	min_size=10000	disabled
-SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
-SV genotype affected	genotypes=hom	same_genotype=false	disabled
 SV break point density NGSD	max_density=20	remove_strict=no	only_system_specific=yes	disabled
 SV-lr support reads	min_support=5	disabled
-SV OMIM genes	disabled
-SV gene overlap	complete=true	exonic/splicing=true	intronic/intergenic=false	disabled
+SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
+SV genotype affected	genotypes=hom	same_genotype=no	disabled
+SV OMIM genes	action=FILTER	disabled
+SV gene overlap	complete=yes	exonic/splicing=yes	intronic/intergenic=no	disabled
 SV compound-heterozygous	mode=n/a	disabled
-SV break point density NGSD	disabled
+SV break point density NGSD	max_density=30	remove_strict=no	only_system_specific=no	disabled
 #---
 #exome stringent
 SV remove chr type	chromosome type=special chromosomes
@@ -116,6 +118,26 @@ SV gene overlap	complete=true	exonic/splicing=true	intronic/intergenic=false	dis
 SV filter columns	action=FILTER	entries=PASS	disabled
 SV trio	types=de-novo,recessive,LOH,comp-het,x-linked	build=hg38
 SV break point density NGSD	disabled
+
+#trio lrGS stringent
+SV remove chr type	chromosome type=special chromosomes
+SV allele frequency NGSD	max_af=1
+SV filter columns	entries=PASS	action=FILTER
+SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
+SV OMIM genes	action=FILTER	disabled
+SV gene overlap	complete=yes	exonic/splicing=yes	intronic/intergenic=no
+SV trio	types=de-novo,recessive,LOH,comp-het,x-linked	gender_child=n/a	build=hg38
+SV break point density NGSD	max_density=20	remove_strict=no	only_system_specific=no	disabled
+
+#trio lrGS relaxed
+SV remove chr type	chromosome type=special chromosomes
+SV allele frequency NGSD	max_af=1
+SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
+SV OMIM genes	action=FILTER	disabled
+SV gene overlap	complete=yes	exonic/splicing=yes	intronic/intergenic=no	disabled
+SV filter columns	entries=PASS	action=FILTER	disabled
+SV trio	types=de-novo,recessive,LOH,comp-het,x-linked	gender_child=n/a	build=hg38
+SV break point density NGSD	max_density=20	remove_strict=no	only_system_specific=no	disabled
 
 #---
 
