src/VcfAnnotateFromVcf/*: added option to annotate only existence of variants in the source file
src/cppNGS/FilterCascade.cpp: adjusted lrGS SV AF filter to allow set min/max

src/cppNGS-TEST/FilterCascade_Test.h: adjusted test

src/tools-TEST/*: added tests for VcfAnnotateFromVcf

--- a/bin/GSvar_filters_sv.ini
+++ b/bin/GSvar_filters_sv.ini
@@ -36,6 +36,7 @@ SV OMIM genes	action=FILTER	disabled
 SV gene overlap	complete=yes	exonic/splicing=yes	intronic/intergenic=no	disabled
 SV compound-heterozygous	mode=n/a	disabled
 SV break point density NGSD	max_density=30	remove_strict=no	only_system_specific=no	disabled
+SV-lr AF	min_af=0.2	max_af=1
 #lrGS relaxed
 SV remove chr type	chromosome type=special chromosomes
 SV allele frequency NGSD	max_af=1
@@ -50,6 +51,7 @@ SV OMIM genes	action=FILTER	disabled
 SV gene overlap	complete=yes	exonic/splicing=yes	intronic/intergenic=no	disabled
 SV compound-heterozygous	mode=n/a	disabled
 SV break point density NGSD	max_density=30	remove_strict=no	only_system_specific=no	disabled
+SV-lr AF	min_af=0.2	max_af=1
 #---
 #exome stringent
 SV remove chr type	chromosome type=special chromosomes
