--- a/.github/workflows/windows_machine.yml
+++ b/.github/workflows/windows_machine.yml
@@ -15,7 +15,7 @@ jobs:
           msystem: MINGW64
           update: true
           release: true
-          install: git base-devel mingw-w64-x86_64-toolchain mingw-w64-x86_64-zlib mingw-w64-x86_64-bzip2 mingw-w64-x86_64-xz mingw-w64-x86_64-curl mingw-w64-x86_64-dlfcn mingw-w64-x86_64-qt5 mingw-w64-x86_64-libmariadbclient mingw-w64-x86_64-python mingw-w64-x86_64-python-numpy mingw-w64-x86_64-python-matplotlib mingw-w64-x86_64-python-packaging unzip
+          install: git base-devel mingw-w64-x86_64-toolchain mingw-w64-x86_64-zlib mingw-w64-x86_64-bzip2 mingw-w64-x86_64-xz mingw-w64-x86_64-curl mingw-w64-x86_64-dlfcn mingw-w64-x86_64-qt5 mingw-w64-x86_64-libmariadbclient mingw-w64-x86_64-python mingw-w64-x86_64-python-numpy mingw-w64-x86_64-python-matplotlib mingw-w64-x86_64-python-packaging mingw-w64-x86_64-sqlite3 libsqlite libsqlite-devel unzip
       - name: Update submodules
         run: git submodule update --recursive --init
       - name: Unpack htslib
