GSvar: final changes to RE dialog

--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -17,6 +17,19 @@ Count NGSD	max_count=20	ignore_genotype=no	mosaic_as_het=no
 Impact	impact=MODIFIER
 Splice effect	SpliceAi=0.5	MaxEntScan=HIGH	splice_site_only=false	action=FILTER
 
+#rare variants (non-coding, UTR/RNA)
+Allele frequency	max_af=1
+Allele frequency (sub-populations)	max_af=1
+Count NGSD	max_count=20	ignore_genotype=no	mosaic_as_het=no
+Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=yes	action=KEEP
+Allele frequency	max_af=2
+Filter columns	entries=low_mappability,mosaic	action=REMOVE
+Classification NGSD	classes=1,2	action=REMOVE
+Classification NGSD	classes=3,4,5,M	action=KEEP
+Variant type	HIGH=	MODERATE=	LOW=	MODIFIER=3_prime_UTR_variant,5_prime_UTR_variant,non_coding_transcript_exon_variant
+OMIM genes	action=FILTER
+Predicted pathogenic	min=1	action=FILTER	skip_high_impact=no	cutoff_phylop=1.6	cutoff_cadd=20	cutoff_revel=0.9	cutoff_alphamissense=0.56
+
 #GSvar score/rank
 GSvar score/rank	top=10
 
