--- a/bin/GSvar_filters_sv.ini
+++ b/bin/GSvar_filters_sv.ini
@@ -8,7 +8,7 @@ SV CNV overlap	min_ol=0.5	min_size=10000
 SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
 SV genotype affected	genotypes=hom	same_genotype=false	disabled
 SV OMIM genes	disabled
-SV gene overlap	complete=true	exonic/splicing=true	intronic/intergenic=false	disabled
+SV gene overlap	complete=true	exonic/splicing=true	intronic/near gene=false	disabled
 SV compound-heterozygous	mode=n/a	disabled
 SV break point density NGSD	disabled
 #wgs relaxed
@@ -18,7 +18,7 @@ SV CNV overlap	min_ol=0.5	min_size=10000	disabled
 SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
 SV genotype affected	genotypes=hom	same_genotype=false	disabled
 SV OMIM genes	disabled
-SV gene overlap	complete=true	exonic/splicing=true	intronic/intergenic=false	disabled
+SV gene overlap	complete=true	exonic/splicing=true	intronic/near gene=false	disabled
 SV compound-heterozygous	mode=n/a	disabled
 SV break point density NGSD	disabled
 #---
@@ -33,7 +33,7 @@ SV-lr support reads	min_support=5
 SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
 SV genotype affected	genotypes=hom	same_genotype=no	disabled
 SV OMIM genes	action=FILTER	disabled
-SV gene overlap	complete=yes	exonic/splicing=yes	intronic/intergenic=no	disabled
+SV gene overlap	complete=yes	exonic/splicing=yes	intronic/near gene=no	disabled
 SV compound-heterozygous	mode=n/a	disabled
 SV break point density NGSD	max_density=30	remove_strict=no	only_system_specific=no	disabled
 SV-lr AF	min_af=0.2	max_af=1
@@ -48,7 +48,7 @@ SV-lr support reads	min_support=5	disabled
 SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
 SV genotype affected	genotypes=hom	same_genotype=no	disabled
 SV OMIM genes	action=FILTER	disabled
-SV gene overlap	complete=yes	exonic/splicing=yes	intronic/intergenic=no	disabled
+SV gene overlap	complete=yes	exonic/splicing=yes	intronic/near gene=no	disabled
 SV compound-heterozygous	mode=n/a	disabled
 SV break point density NGSD	max_density=30	remove_strict=no	only_system_specific=no	disabled
 SV-lr AF	min_af=0.2	max_af=1
@@ -62,7 +62,7 @@ SV quality	quality=100
 SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
 SV genotype affected	genotypes=hom	same_genotype=false	disabled
 SV OMIM genes	disabled
-SV gene overlap	complete=true	exonic/splicing=true	intronic/intergenic=false	disabled
+SV gene overlap	complete=true	exonic/splicing=true	intronic/near gene=false	disabled
 SV compound-heterozygous	mode=n/a	disabled
 SV break point density NGSD	disabled
 #exome relaxed
@@ -71,7 +71,7 @@ SV count NGSD	max_count=30
 SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
 SV genotype affected	genotypes=hom	same_genotype=false	disabled
 SV OMIM genes	disabled
-SV gene overlap	complete=true	exonic/splicing=true	intronic/intergenic=false	disabled
+SV gene overlap	complete=true	exonic/splicing=true	intronic/near gene=false	disabled
 SV compound-heterozygous	mode=n/a	disabled
 SV break point density NGSD	disabled
 
@@ -85,7 +85,7 @@ SV PE read depth	PE Read Depth=5	only_affected=true
 SV quality	quality=100
 SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
 SV OMIM genes	disabled
-SV gene overlap	complete=true	exonic/splicing=true	intronic/intergenic=false
+SV gene overlap	complete=true	exonic/splicing=true	intronic/near gene=false
 SV trio	types=de-novo,recessive,LOH,comp-het,x-linked	build=hg38
 SV break point density NGSD	disabled
 
@@ -94,7 +94,7 @@ SV remove chr type	chromosome type=special chromosomes
 SV allele frequency NGSD	max_af=1.00
 SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
 SV OMIM genes	disabled
-SV gene overlap	complete=true	exonic/splicing=true	intronic/intergenic=false	disabled
+SV gene overlap	complete=true	exonic/splicing=true	intronic/near gene=false	disabled
 SV filter columns	action=FILTER	entries=PASS	disabled
 SV trio	types=de-novo,recessive,LOH,comp-het,x-linked	build=hg38
 SV break point density NGSD	disabled
@@ -107,7 +107,7 @@ SV PE read depth	PE Read Depth=5	only_affected=true
 SV quality	quality=100
 SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
 SV OMIM genes	disabled
-SV gene overlap	complete=true	exonic/splicing=true	intronic/intergenic=false
+SV gene overlap	complete=true	exonic/splicing=true	intronic/near gene=false
 SV trio	types=de-novo,recessive,LOH,comp-het,x-linked	build=hg38
 SV break point density NGSD	disabled
 
@@ -116,7 +116,7 @@ SV remove chr type	chromosome type=special chromosomes
 SV count NGSD	max_count=20
 SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
 SV OMIM genes	disabled
-SV gene overlap	complete=true	exonic/splicing=true	intronic/intergenic=false	disabled
+SV gene overlap	complete=true	exonic/splicing=true	intronic/near gene=false	disabled
 SV filter columns	action=FILTER	entries=PASS	disabled
 SV trio	types=de-novo,recessive,LOH,comp-het,x-linked	build=hg38
 SV break point density NGSD	disabled
@@ -127,7 +127,7 @@ SV allele frequency NGSD	max_af=1
 SV filter columns	entries=PASS	action=FILTER
 SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
 SV OMIM genes	action=FILTER	disabled
-SV gene overlap	complete=yes	exonic/splicing=yes	intronic/intergenic=no
+SV gene overlap	complete=yes	exonic/splicing=yes	intronic/near gene=no
 SV trio	types=de-novo,recessive,LOH,comp-het,x-linked	gender_child=n/a	build=hg38
 SV break point density NGSD	max_density=20	remove_strict=no	only_system_specific=no	disabled
 
@@ -136,7 +136,7 @@ SV remove chr type	chromosome type=special chromosomes
 SV allele frequency NGSD	max_af=1
 SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
 SV OMIM genes	action=FILTER	disabled
-SV gene overlap	complete=yes	exonic/splicing=yes	intronic/intergenic=no	disabled
+SV gene overlap	complete=yes	exonic/splicing=yes	intronic/near gene=no	disabled
 SV filter columns	entries=PASS	action=FILTER	disabled
 SV trio	types=de-novo,recessive,LOH,comp-het,x-linked	gender_child=n/a	build=hg38
 SV break point density NGSD	max_density=20	remove_strict=no	only_system_specific=no	disabled
@@ -148,7 +148,7 @@ SV remove chr type	chromosome type=special chromosomes
 SV count NGSD	max_count=20
 SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
 SV OMIM genes	disabled
-SV gene overlap	complete=true	exonic/splicing=true	intronic/intergenic=false	disabled
+SV gene overlap	complete=true	exonic/splicing=true	intronic/near gene=false	disabled
 SV filter columns	action=FILTER	entries=PASS	disabled
 SV genotype affected	genotypes=hom
 SV genotype control	genotypes=het,wt
@@ -159,7 +159,7 @@ SV remove chr type	chromosome type=special chromosomes
 SV count NGSD	max_count=20
 SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
 SV OMIM genes	disabled
-SV gene overlap	complete=true	exonic/splicing=true	intronic/intergenic=false	disabled
+SV gene overlap	complete=true	exonic/splicing=true	intronic/near gene=false	disabled
 SV filter columns	action=FILTER	entries=PASS	disabled
 SV genotype affected	genotypes=het,hom
 SV genotype control	genotypes=wt
